@@ -1,0 +1,4 @@
+misc/misc.a
+msg/msg.a
+iobuf/iobuf.a
+setenv.o
